[package]
name = "umbra"
version = "0.1.0"
edition = "2021"
authors = ["Shadorain"]
repository = "https://github.com/Shadorain/Umbra"
description = "** Umbra TUI Framework: a simple yet highly configurable framework to generate flexible and fast TUIs **"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["command-line-utilities", "command-line-interface", "text-editors"]

[dependencies]
bevy_ecs = "0.10.1"
bitflags = "2.2.1"
thiserror = "1.0.40"
cfg-if = "1.0.0"

[dependencies.crossterm]
optional = true
version = "0.26.1"

[features]
default = ["crossterm-backend"]
crossterm-backend = ["crossterm"]
